@startuml

title __FISE_2024_2025_DUNGEON_CRAWLER's Class Diagram__\n

  namespace  {
    enum Direction {
    }
  }
  

  namespace  {
    interface Displayable {
    }
  }
  

  namespace  {
    class DynamicSprite {
    }
  }
  

  namespace  {
    interface Engine {
    }
  }
  

  namespace  {
    class GameEngine {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class PhysicEngine {
    }
  }
  

  namespace  {
    class Playground {
    }
  }
  

  namespace  {
    class RenderEngine {
    }
  }
  

  namespace  {
    class SolidSprite {
    }
  }
  

  namespace  {
    class Sprite {
    }
  }
  

  DynamicSprite -up-|> SolidSprite
  DynamicSprite o-- Direction : direction
  GameEngine .up.|> Engine
  GameEngine .up.|> java.awt.event.KeyListener
  GameEngine o-- DynamicSprite : hero
  Main o-- GameEngine : gameEngine
  Main o-- PhysicEngine : physicEngine
  Main o-- RenderEngine : renderEngine
  PhysicEngine .up.|> Engine
  RenderEngine .up.|> Engine
  RenderEngine -up-|> javax.swing.JPanel
  SolidSprite -up-|> Sprite
  Sprite .up.|> Displayable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
